[package]
name = "tiled_wfc"
description = "A n-dimensional tiled wave function collapse library"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
nd_matrix = { git = "https://github.com/JoshForletta/nd_matrix.git" }
rand = "0.8"
bitvec = "1"

[dev-dependencies]
clap = { version = "4.3.0", features = ["derive"] }
unicode_box_drawing_wfc = { git = "https://github.com/JoshForletta/unicode_box_drawing_wfc" }
